syntax="proto3";

package user;

option go_package = "./user";

service User {
    rpc RegisterUser(RegisterUserRequest) returns (NoResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}

message RegisterUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message NoResponse {
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string name = 1;
    string email = 2;
    string token = 3;
}